# GUIDE_data_analysis

./: .gitignore  README.md  pyproject.toml
config/: analysis.toml
src/guide_analysis/: __init__.py  __main__.py  cli.py  config.py
src/guide_analysis/survey_processing/: __init__.py  cleaning.py  columns.py  io.py  preprocessing.py  processor.py
