[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guide-analysis"
version = "0.1.0"
description = "Python analysis pipeline for GUIDE survey data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
guide-analysis = "guide_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true